tests/profile/error/keybinding/wrongtype_script.profile
{
  "version": { "major": 1, "minor": 0 },
  "keybindings": [
    {
      "key": "T",
      "documentation": "T documentation",
      "name": "T name",
      "gui_path": "T Gui-Path",
      "is_local": true,
      "script": 1.0
    }
  ]
}
